samples/_failures_safe/1761360454_4a14cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e5a3a41.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_8e5a3a41.c:144:22: error: expected ‘;’ at end of input
  144 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_8e5a3a41.c:144:5: error: expected declaration or statement at end of input
  144 |     for (int i = 0; i
      |     ^~~
